# ttycolor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: println.rs
src/: color.rs  lib.rs
