[package]
name = "ttycolor"
version = "0.1.1"
authors = ["develon2015 <302615249@qq.com>"]
edition = "2018"
repository = "https://github.com/develon2015/ttycolor"
description = "easy way to use termcolor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.2"                # A simple cross platform library for writing colored text to a terminal. 
